k8s/home-assistant/home-assistant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: home-assistant
  name: home-assistant
