k8s/home-assistant/home-assistant-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: home-assistant
  name: home-assistant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:2024.9.2
        ports:
        - containerPort: 8123
        volumeMounts:
        - name: home-assistant-config
          mountPath: /config
      volumes:
      - name: home-assistant-config
        hostPath:
          path: /svc/smart-home/homeassistant
          type: Directory
