k8s/home-assistant/home-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: auth.morrislan.net
